--- a/index.html
+++ b/index.html
@@ -48,47 +48,55 @@
     <div class="container">
       <div class="section">
 
-        <!--   Icon Section   -->
-        <div class="row">
-          <div class="col s12 m3">
-            <div class="icon-block">
-              <h2 class="center light-blue-text"><i class="material-icons">swap_horiz</i></h2>
-              <h5 class="center">Minimize the spread of viruses</h5>
 
-              <p class="light">Vaccine has been proven affective to prevent someone from getting infected with Coronavirus.</p>
+        <h1 class="header center">Why should i vacine?</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">In order to avoid any doubts about getting the
+            COVID-19 vaccine, identify the following 4 benefits of COVID-19 Vaccination:
+          </h5>
+
+          <div class="row">
+            <div class="col s12 m3">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">swap_horiz</i></h2>
+                <h5 class="center">Minimize the spread of viruses</h5>
+
+                <p class="light">Vaccine has been proven affective to prevent someone from getting infected with
+                  Coronavirus.</p>
+              </div>
             </div>
-          </div>
 
-          <div class="col s12 m3">
-            <div class="icon-block">
-              <h2 class="center light-blue-text"><i class="material-icons">verified_user</i></h2>
-              <h5 class="center">Forming antibodies</h5>
+            <div class="col s12 m3">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">verified_user</i></h2>
+                <h5 class="center">Forming antibodies</h5>
 
-              <p class="light">COVID-19 vaccine proven to help shape antobody response for inmune system.</p>
+                <p class="light">COVID-19 vaccine proven to help shape antobody response for inmune system.</p>
+              </div>
             </div>
-          </div>
-          <div class="col s12 m3">
-            <div class="icon-block">
-              <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-              <h5 class="center">Protecting people nearby</h5>
+            <div class="col s12 m3">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                <h5 class="center">Protecting people nearby</h5>
 
-              <p class="light">The benefits of COVID-19 vaccination are the vaccine that we get 
-                can also help protect people around us.</p>
+                <p class="light">The benefits of COVID-19 vaccination are the vaccine that we get
+                  can also help protect people around us.</p>
+              </div>
             </div>
-          </div>
-          <div class="col s12 m3">
-            <div class="icon-block">
-              <h2 class="center light-blue-text"><i class="material-icons">trending_up</i></h2>
-              <h5 class="center">Creating group immunity</h5>
+            <div class="col s12 m3">
+              <div class="icon-block">
+                <h2 class="center light-blue-text"><i class="material-icons">trending_up</i></h2>
+                <h5 class="center">Creating group immunity</h5>
 
-              <p class="light">COVID-19 vaccination is also beneficial for creating
-                group immunity or herd immunity.
-              </p>
+                <p class="light">COVID-19 vaccination is also beneficial for creating
+                  group immunity or herd immunity.
+                </p>
+              </div>
             </div>
           </div>
         </div>
+        <br><br>
       </div>
-      <br><br>
     </div>
 
     <footer class="page-footer grey">
