--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Starter Template - Materialize</title>
+  <title>Vaccination</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -98,7 +98,31 @@
         <br><br>
       </div>
     </div>
+    <div class="container">
 
+      <div class="row">
+        <div class="col s6">
+          <img src="./images/cubrebocas.jpg" alt="" width="600px">
+        </div>
+        <div class="col s6">
+          <a class=" grey waves-effect waves-light btn-large"><i class="material-icons left">verified_user</i>Avoid alcoholic
+            beverages</a>
+          <br><br>
+          <a class=" grey waves-effect waves-light btn-large"><i class="material-icons left">clear</i>Avoid stress</a>
+          <br><br>
+          <a class="grey waves-effect waves-light btn-large"><i class="material-icons left">insert_chart</i>Eat healthy
+            food</a>
+          <br><br>
+          <a class="grey waves-effect waves-light btn-large"><i class="material-icons left">check</i>Get enough
+            sleep</a>
+          <br><br>
+          <a class="grey waves-effect waves-light btn-large"><i class="material-icons left">favorite</i>Exercise or
+            physical activity</a>
+          <br><br>
+        </div>
+      </div>
+    </div>
+    <br><br>
     <footer class="page-footer grey">
       <div class="container">
         <div class="row">
