--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
           <img src="./images/cubrebocas.jpg" alt="" width="600px">
         </div>
         <div class="col s6">
-          <a class=" grey waves-effect waves-light btn-large"><i class="material-icons left">verified_user</i>Avoid alcoholic
+          <a class=" grey waves-effect waves-light btn-large"><i class="material-icons left">verified_user</i>Avoid
+            alcoholic
             beverages</a>
           <br><br>
           <a class=" grey waves-effect waves-light btn-large"><i class="material-icons left">clear</i>Avoid stress</a>
